--- a/public/404.html
+++ b/public/404.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:300,400,700" type="text/css" rel="stylesheet">
   <title>The page you were looking for doesn't exist (404)</title>
   <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
+    body { background-color: #fff; color: #666; text-align: center; font-family: 'Open Sans', arial, sans-serif; }
     div.dialog {
-      width: 25em;
+      width: 80%;
       padding: 0 4em;
       margin: 4em auto 0 auto;
       border: 1px solid #ccc;
       border-right-color: #999;
       border-bottom-color: #999;
     }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+    h1 { 
+      font-family: 'Open Sans Condensed';
+      font-weight: 400;
+      font-size: 3rem;
+      color: #444; line-height: 1.5em; 
+    }
   </style>
 </head>
 
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
+    <h1>404 - Not found!</h1>
+    <img src="static/404.jpg">
     <p>You may have mistyped the address or the page may have moved.</p>
   </div>
 </body>
