--- a/public/500.html
+++ b/public/500.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:300,400,700" type="text/css" rel="stylesheet">
   <title>We're sorry, but something went wrong (500)</title>
   <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+  body { background-color: #fff; color: #666; text-align: center; font-family: 'Open Sans', arial, sans-serif; }
+  div.dialog {
+    width: 80%;
+    padding: 0 4em;
+    margin: 4em auto 0 auto;
+    border: 1px solid #ccc;
+    border-right-color: #999;
+    border-bottom-color: #999;
+  }
+  h1 { 
+    font-family: 'Open Sans Condensed';
+    font-weight: 400;
+    font-size: 3rem;
+    color: #444; line-height: 1.5em; 
+  }
   </style>
 </head>
 
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-    <p>We've been notified about this issue and we'll take a look at it shortly.</p>
+    <h1>500 - Internal server error!</h1>
+    <img src="static/500.jpg">
+    <p>Something bad happened. But we assure you that we will try to fix it.</p>
   </div>
 </body>
 </html>
