--- a/public/404.html
+++ b/public/404.html
@@ -26,7 +26,7 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <h1>404 - Not found!</h1>
-    <img src="static/404.jpg">
+    <img src="/static/404.jpg">
     <p>You may have mistyped the address or the page may have moved.</p>
   </div>
 </body>
