--- a/public/500.html
+++ b/public/500.html
@@ -26,7 +26,7 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <h1>500 - Internal server error!</h1>
-    <img src="static/500.jpg">
+    <img src="/static/500.jpg">
     <p>Something bad happened. But we assure you that we will try to fix it.</p>
   </div>
 </body>
